--- a/ServiciiAutoProject/ServiciiAutoProject.csproj
+++ b/ServiciiAutoProject/ServiciiAutoProject.csproj
@@ -168,8 +168,15 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\jsGrid\jsgrid-theme.css" />
+    <Content Include="Scripts\jsGrid\jsgrid-theme.min.css" />
+    <Content Include="Scripts\jsGrid\jsgrid.css" />
+    <Content Include="Scripts\jsGrid\jsgrid.js" />
+    <Content Include="Scripts\jsGrid\jsgrid.min.css" />
+    <Content Include="Scripts\jsGrid\jsgrid.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\Pages\editRecordController.js" />
+    <Content Include="Scripts\Pages\recordsController.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config" />
