--- a/ServiciiAutoProject/packages.config
+++ b/ServiciiAutoProject/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="jose-jwt" version="2.3.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -16,11 +17,35 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Nexmo.Csharp.Client" version="3.2.2" targetFramework="net461" />
+  <package id="OpenSSL.PrivateKeyDecoder" version="1.2.0" targetFramework="net461" />
+  <package id="OpenSSL.X509Certificate2.Provider" version="1.2.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net461" />
+  <package id="System.IO" version="4.1.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
