--- a/DataLayer/ServiciiAuto.DataLayer.csproj
+++ b/DataLayer/ServiciiAuto.DataLayer.csproj
@@ -49,10 +49,12 @@
     <Compile Include="Models\ClientInformedStatus.cs" />
     <Compile Include="Models\Record.cs" />
     <Compile Include="Models\RecordType.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Models\VehicleType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\EnumsRepository.cs" />
+    <Compile Include="Repository\LoginRepository.cs" />
     <Compile Include="Repository\RecordRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
