--- a/DataLayer/ServiciiAuto.DataLayer.csproj
+++ b/DataLayer/ServiciiAuto.DataLayer.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Models\VehicleType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\ClientRepository.cs" />
     <Compile Include="Repository\EnumsRepository.cs" />
     <Compile Include="Repository\LoginRepository.cs" />
     <Compile Include="Repository\RecordRepository.cs" />
