Added upload file functionallity

--- a/ServiciiAutoProject/ServiciiAutoProject.csproj
+++ b/ServiciiAutoProject/ServiciiAutoProject.csproj
@@ -257,7 +257,7 @@
     <Content Include="Views\Client\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\uploads\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
