--- a/ServiciiAutoProject/Web.config
+++ b/ServiciiAutoProject/Web.config
@@ -60,5 +60,6 @@
   </system.codedom>
   <connectionStrings>
     <add name="connectionString" connectionString="server=DESKTOP-QLDQI75;database=serviciiAuto;uid=sa;password=test1234;" />
+    <!--<add name="connectionString" connectionString="Data Source=188.213.132.104,1533;Database=mobaserviciiauto;Integrated Security=false;User ID=transportmoba;Password=fgby@qumzenxlkj8hrct" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 </configuration>
